Consumers of subsystems must follow subsystem rules
